# data-gathering-api

./: .gitignore  Dockerfile  README.md  api.py  config.yaml  pyproject.toml  requirements.txt
data/: Answer.csv  ExamAnswerResult.csv  ExamQuestionResult.csv  ExamResult.csv  Question.csv  exam_answer_result.csv  exam_question_result.csv  exam_result.csv  feeds.jsonl
functions/: __init__.py  bigquery_client.py  bigquery_loader.py  config.py
functions/repositories/: course_repo.py  exam_repo.py  full_question_repo.py
sample/: export_test_data.py
sample/test_data/: course.csv  question.csv
sample/test_data 2/: answer.csv  exam_answer_result.csv  exam_question_result.csv  exam_result.csv
